<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.hikerswatch.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/hiker_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/hiker" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/title"
        android:layout_below="@+id/title"
        android:layout_marginTop="15dp"
        android:text="@string/lat"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#2b2929"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/title"
        android:layout_below="@+id/lat"
        android:layout_marginTop="15dp"
        android:text="@string/lng"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#2b2929"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/title"
        android:layout_below="@+id/lng"
        android:layout_marginTop="15dp"
        android:text="@string/accuracy"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#2b2929"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/title"
        android:layout_below="@+id/accuracy"
        android:layout_marginTop="15dp"
        android:text="@string/altitude"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#2b2929"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/title"
        android:layout_below="@+id/altitude"
        android:layout_marginTop="15dp"
        android:text="@string/speed"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#2b2929"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/bearing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/title"
        android:layout_below="@+id/speed"
        android:layout_marginTop="15dp"
        android:text="@string/bearing"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#2b2929"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/title"
        android:layout_below="@+id/bearing"
        android:layout_marginTop="15dp"
        android:text="@string/address"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#2b2929"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/copyright" />

</RelativeLayout>
